// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Favorites render Should Favorites render correctly 1`] = `
<div
  className="page"
>
  <header
    className="header"
  >
    <div
      className="container"
    >
      <div
        className="header__wrapper"
      >
        <div
          className="header__left"
        >
          <a
            className="header__logo-link"
            href="/"
            onClick={[Function]}
          >
            <img
              alt="6 cities logo"
              className="header__logo"
              height={41}
              src="img/logo.svg"
              width={81}
            />
          </a>
        </div>
        <nav
          className="header__nav"
        >
          <ul
            className="header__nav-list"
          >
            <li
              className="header__nav-item user"
            >
              <a
                className="header__nav-link header__nav-link--profile"
                href="/login"
                onClick={[Function]}
              >
                <div
                  className="header__avatar-wrapper user__avatar-wrapper"
                />
                <span
                  className="header__user-name user__name"
                >
                  Sign In
                </span>
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </header>
  <FavoriteItem
    offers={
      Array [
        Object {
          "city": "Amsterdam",
          "cityCoordinates": Array [
            52.38333,
            4.9,
          ],
          "coordinates": Array [
            52.3909553943508,
            4.85309666406198,
          ],
          "description": "The delusion emphasizes intelligent common sense, although the opposite is accepted in the official language.",
          "detailsMapZoom": 12,
          "features": Object {
            "adults": 2,
            "badrooms": 1,
            "type": "hotel",
          },
          "id": 0,
          "isFavorite": false,
          "isPremium": false,
          "mapZoom": 10,
          "owner": Object {
            "id": 0,
            "name": "Spider Man",
            "picture": "img/avatar-angelina.jpg",
            "super": true,
          },
          "pictures": Array [
            "img/apartment-small-03.jpg",
            "img/apartment-small-04.jpg",
            "img/room-small.jpg",
            "img/studio-photos.jpg",
          ],
          "previewPictures": "img/apartment-small-01.jpg",
          "price": 100,
          "rating": 3.4,
          "things": Array [
            "Wifi",
            "Heating",
            "Kitchen",
            "Cable TV",
            "Own bathroom",
            "Hair-dryer",
            "AC",
          ],
          "title": "TITLE",
        },
        Object {
          "city": "Amsterdam",
          "cityCoordinates": Array [
            52.38333,
            4.9,
          ],
          "coordinates": Array [
            52.3909553943508,
            4.8530966640619,
          ],
          "description": "The delusion emphasizes intelligent common sense, although the opposite is accepted in the official language.",
          "detailsMapZoom": 12,
          "features": Object {
            "adults": 4,
            "badrooms": 2,
            "type": "hotel",
          },
          "id": 2,
          "isFavorite": true,
          "isPremium": false,
          "mapZoom": 10,
          "owner": Object {
            "id": 1,
            "name": "Iron Man",
            "picture": "img/avatar-angelina.jpg",
            "super": false,
          },
          "pictures": Array [
            "img/apartment-small-03.jpg",
            "img/apartment-small-04.jpg",
            "img/room-small.jpg",
            "img/studio-photos.jpg",
          ],
          "previewPictures": "img/apartment-small-01.jpg",
          "price": 200,
          "rating": 4.5,
          "things": Array [
            "Wifi",
            "Heating",
            "Kitchen",
            "Cable TV",
            "Own bathroom",
            "Hair-dryer",
            "AC",
          ],
          "title": "TITLE - 2",
        },
        Object {
          "city": "Amsterdam",
          "cityCoordinates": Array [
            52.38333,
            4.9,
          ],
          "coordinates": Array [
            52.390955394351,
            4.85309666406201,
          ],
          "description": "The delusion emphasizes intelligent common sense, although the opposite is accepted in the official language.",
          "detailsMapZoom": 12,
          "features": Object {
            "adults": 6,
            "badrooms": 1,
            "type": "private room",
          },
          "id": 3,
          "isFavorite": false,
          "isPremium": true,
          "mapZoom": 10,
          "owner": Object {
            "id": 3,
            "name": "Billi Willi",
            "picture": "img/avatar-angelina.jpg",
            "super": true,
          },
          "pictures": Array [
            "img/apartment-small-03.jpg",
            "img/apartment-small-04.jpg",
            "img/room-small.jpg",
            "img/studio-photos.jpg",
          ],
          "previewPictures": "img/apartment-small-01.jpg",
          "price": 300,
          "rating": 4.9,
          "things": Array [
            "Wifi",
            "Heating",
            "Kitchen",
            "Cable TV",
            "Own bathroom",
            "Hair-dryer",
            "AC",
          ],
          "title": "TITLE - 3",
        },
        Object {
          "city": "Amsterdam",
          "cityCoordinates": Array [
            52.38333,
            4.9,
          ],
          "coordinates": Array [
            52.3909553943515,
            4.85309666406196,
          ],
          "description": "The delusion emphasizes intelligent common sense, although the opposite is accepted in the official language.",
          "detailsMapZoom": 12,
          "features": Object {
            "adults": 3,
            "badrooms": 6,
            "type": "house",
          },
          "id": 4,
          "isFavorite": true,
          "isPremium": true,
          "mapZoom": 10,
          "owner": Object {
            "id": 4,
            "name": "Agent 007",
            "picture": "img/avatar-angelina.jpg",
            "super": true,
          },
          "pictures": Array [
            "img/apartment-small-03.jpg",
            "img/apartment-small-04.jpg",
            "img/room-small.jpg",
            "img/studio-photos.jpg",
          ],
          "previewPictures": "img/apartment-small-01.jpg",
          "price": 400,
          "rating": 2.1,
          "things": Array [
            "Wifi",
            "Heating",
            "Kitchen",
            "Cable TV",
            "Own bathroom",
            "Hair-dryer",
            "AC",
          ],
          "title": "TITLE - 4",
        },
      ]
    }
  />
  <footer
    className="footer container"
  >
    <a
      className="footer__logo-link"
      href="main.html"
    >
      <img
        alt="6 cities logo"
        className="footer__logo"
        height={33}
        src="img/logo.svg"
        width={64}
      />
    </a>
  </footer>
</div>
`;

exports[`Favorites render Should Favorites without offers render correctly 1`] = `
<div
  className="page"
>
  <header
    className="header"
  >
    <div
      className="container"
    >
      <div
        className="header__wrapper"
      >
        <div
          className="header__left"
        >
          <a
            className="header__logo-link"
            href="/"
            onClick={[Function]}
          >
            <img
              alt="6 cities logo"
              className="header__logo"
              height={41}
              src="img/logo.svg"
              width={81}
            />
          </a>
        </div>
        <nav
          className="header__nav"
        >
          <ul
            className="header__nav-list"
          >
            <li
              className="header__nav-item user"
            >
              <a
                className="header__nav-link header__nav-link--profile"
                href="/login"
                onClick={[Function]}
              >
                <div
                  className="header__avatar-wrapper user__avatar-wrapper"
                />
                <span
                  className="header__user-name user__name"
                >
                  Sign In
                </span>
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </header>
  <main
    className="page__main page__main--favorites page__main--favorites-empty"
  >
    <div
      className="page__favorites-container container"
    >
      <section
        className="favorites favorites--empty"
      >
        <h1
          className="visually-hidden"
        >
          Favorites (empty)
        </h1>
        <div
          className="favorites__status-wrapper"
        >
          <b
            className="favorites__status"
          >
            Nothing yet saved.
          </b>
          <p
            className="favorites__status-description"
          >
            Save properties to narrow down search or plan yor future trips.
          </p>
        </div>
      </section>
    </div>
  </main>
  <footer
    className="footer container"
  >
    <a
      className="footer__logo-link"
      href="main.html"
    >
      <img
        alt="6 cities logo"
        className="footer__logo"
        height={33}
        src="img/logo.svg"
        width={64}
      />
    </a>
  </footer>
</div>
`;
